# SparkExercises

./: README.md  main.py  pyproject.toml  requirements.txt
dao/: exercises.py  load_data.py  logger.py
input/spark-interview/applications_parquet/: .part-00000-acae6c6a-1604-43ab-a151-3c5596aeb1e6-c000.snappy.parquet.crc  .part-00001-acae6c6a-1604-43ab-a151-3c5596aeb1e6-c000.snappy.parquet.crc  .part-00002-acae6c6a-1604-43ab-a151-3c5596aeb1e6-c000.snappy.parquet.crc  .part-00003-acae6c6a-1604-43ab-a151-3c5596aeb1e6-c000.snappy.parquet.crc  .part-00004-acae6c6a-1604-43ab-a151-3c5596aeb1e6-c000.snappy.parquet.crc  .part-00005-acae6c6a-1604-43ab-a151-3c5596aeb1e6-c000.snappy.parquet.crc  .part-00006-acae6c6a-1604-43ab-a151-3c5596aeb1e6-c000.snappy.parquet.crc  .part-00007-acae6c6a-1604-43ab-a151-3c5596aeb1e6-c000.snappy.parquet.crc  .part-00008-acae6c6a-1604-43ab-a151-3c5596aeb1e6-c000.snappy.parquet.crc  .part-00009-acae6c6a-1604-43ab-a151-3c5596aeb1e6-c000.snappy.parquet.crc  .part-00010-acae6c6a-1604-43ab-a151-3c5596aeb1e6-c000.snappy.parquet.crc  .part-00011-acae6c6a-1604-43ab-a151-3c5596aeb1e6-c000.snappy.parquet.crc  .part-00012-acae6c6a-1604-43ab-a151-3c5596aeb1e6-c000.snappy.parquet.crc  .part-00013-acae6c6a-1604-43ab-a151-3c5596aeb1e6-c000.snappy.parquet.crc  .part-00014-acae6c6a-1604-43ab-a151-3c5596aeb1e6-c000.snappy.parquet.crc  .part-00015-acae6c6a-1604-43ab-a151-3c5596aeb1e6-c000.snappy.parquet.crc  .part-00016-acae6c6a-1604-43ab-a151-3c5596aeb1e6-c000.snappy.parquet.crc  (+383 more)
service/: exercise1.py
utils/: spark_utils.py
(+4 files in other folders)
